crates/docnav-typed-fields/tests/ui/field_defs_missing_validation.stderr
error[E0308]: mismatched types
 --> tests/ui/field_defs_missing_validation.rs:5:13
  |
3 | #[derive(FieldDefs)]
  |          --------- expected due to this
4 | struct Params {
5 |     #[field(FieldDef::builder("docnav.defaults.limit_chars").path(["defaults", "limit_chars"]))]
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `FieldDefBuilder<i64>`, found `FieldDefBuilder`
  |
  = note: expected struct `FieldDefBuilder<i64>`
             found struct `FieldDefBuilder<()>`
