crates/docnav-typed-fields/tests/ui/field_defs_missing_validation.rs
use docnav_typed_fields::{FieldDef, FieldDefs};

#[derive(FieldDefs)]
struct Params {
    #[field(FieldDef::builder("docnav.defaults.limit_chars").path(["defaults", "limit_chars"]))]
    limit_chars: i64,
}

fn main() {}
